# AoM-IoT-Bit

./: .gitignore  .gitmodules  AOM IOT Quick Setup.docx  README.md
BOMs/: REV2-BOM-prototype-cyc1.xlsx  REV2-BOM.xlsx
BOMs/REV2/: REV2-BOM-final-adafruit-haul.xlsx  REV2-BOM-prototype-cyc1-digiKey.xlsx
BOMs/REV3/: BOM-full.xlsx  REV2-BOM.xlsx  REV3-BOM-full.csv
CAD/: AoM-IoT-bit-Housing v1.stl  Base-Plate-v5.stl  Base-Plate-v6.stl  Base-v3.stl  Bit_1.SLDPRT  Button black standard.STEP  Top-Plate-v2.stl  Top-Plate-v4.stl  Top-plate-v6.stl  Top-plate-v7.stl  Vertical slide switch SS-12D00G3 High Knob 3mm SPDT v2.f3d  Wifi LittleBit Encasing Face (QuickPrint).stl  Wifi LittleBit Encasing Face.stl
CAD/Base-Plate/: Base-Plate-v4.stl
CAD/Top-Plate/: Top-Plate-v3.stl
CAD/imported/: Arduino_MKR_1000_long_pins.stl  blueLED.SLDPRT  redLED.SLDPRT
Diagrams/: code-flowchart-v2.0.txt  system-Diagram-UML.txt
Fritzing-Schematics/: AOM_IoT_Bit.fzz  AOM_IoT_Bit_V1.1.fzz  AOM_IoT_Bit_V2.0.fzz  AOM_IoT_Bit_V2.0_Issam.fzz  AOM_IoT_Bit_V2.0_Mark_LogicConverter.fzz
Fritzing-Schematics-PCB/: AOM_IoT_Bit_V2.0_Other.fzz  AOM_IoT_Bit_V3.0.fzz
IoT-Bit-Complete/: IoT-Bit-Complete.ino  Wifi_Setup.h
IoT-Bit-Pull/: IoT-Bit-Pull.ino  arduino_secrets.h
Iot-Bit-Push/: IoT-Bit-Push.ino  Wifi_Setup.h  arduino_secrets.h
PCB/: AoM-IoT-Bit.PcbLib  AoM-IoT-Bit.SchLib  REV2-BOM.xlsx
PCB-shield/: REV2-BOM-prototype-cyc1.xlsx  REV2-BOM.xlsx
PCB-shield/AoM-IoT-Bit-Shield/: AoM-IoT-Bit-Shield-v1.0.PcbDoc  AoM-IoT-Bit-Shield-v1.0.step  (+3 more)
Source-Code/mcu-firmware/IoT-Bit-esp32/components/cml/: CMakeLists.txt
Supporting-Guides/: AoM-IoT-Bit-Setup-Guide.docx
(+340 files in other folders)
